--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-    <img th:src="@{images/{newest}(newest = ${newest})}" />
+    <img th:src="@{images/{newest}(newest = ${newest})}" width="470" height="845"/>
 </div>
 </body>
 </html>
