--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bootstrap 4 Website Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
-<div>
-    <img th:src="@{images/{newest}(newest = ${newest})}" width="470" height="845"/>
+    <!--<div class="jumbotron text-center" style="margin-bottom:0">-->
+    <!--</div>-->
+    <div id="demo" class="carousel slide text-center" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+            <div class="carousel-item active crs">
+                <img src="../static/images/11.jpg" alt="1">
+            </div>
+            <div class="carousel-item crs">
+                <img src="../static/images/22.jpg" alt="2">
+            </div>
+            <div class="carousel-item crs">
+                <img src="../static/images/33.jpg" alt="New 3">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+<div class="container" style="margin-top:30px">
+    <div class="row">
+        <div class="col-sm-4">
+            <h2>Информация о ветре:</h2>
+            <h4>Скорость <span th:text="${newest.wind.time}">5</span> км/c</h4>
+            <h4>Направление</h4>
+            <img src="http://kiteschool.lv/wp-content/uploads/2011/05/Roza-vetrov-RU-300x300.jpg"
+            <hr class="d-sm-none">
+        </div>
+        <div class="col-sm-8 text-center">
+            <h2>Модель ветрового волнения</h2>
+            <!--th:src="@{images/{newest}(newest = ${newest})}"-->
+            <img class="wives" src="../static/images/simple.png" />
+            <h4>Высота волны, м</h4>
+            <img class="shale" src="../static/images/scale.png" />
+        </div>
+    </div>
+</div>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+    <p>Сайт разработан Кухарчуком М.М. в демонстрационных целях. 2019</p>
 </div>
 
 </body>
 </html>
+
+
