--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,6 +5,10 @@
     width: 98%;
 }
 
+.col-sm-8.text-center{
+    padding-bottom: 5ch;
+}
+
 .carousel-inner img {
     width: 100%;
     margin: auto;
@@ -14,8 +18,11 @@
 .carousel-caption h3 {
     color: #fff !important;
 }
+.carousel-caption{
+    text-shadow: 1px 1px 1px #000
+}
 @media (max-width: 600px) {
     .carousel-caption {
-        display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+        /* display: none;  Hide the carousel text when the screen is less than 600 pixels wide */
     }
 }
