--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,6 +5,10 @@
     width: 98%;
 }
 
+.wind-image{
+    max-width: 100%;
+}
+
 .col-sm-8.text-center{
     padding-bottom: 5ch;
 }
@@ -27,7 +31,6 @@
     }
 
     .wind-image{
-        height: 50%;
         width: 50%;
     }
 }
