--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Bootstrap 4 Website Example</title>
+    <title>Ветро-волновое поле Куршского залива</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -11,18 +11,15 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <!--<div class="jumbotron text-center" style="margin-bottom:0">-->
-    <!--</div>-->
+
     <div id="demo" class="carousel slide text-center" data-ride="carousel">
 
-        <!-- Indicators -->
         <ul class="carousel-indicators">
             <li data-target="#demo" data-slide-to="0" class="active"></li>
             <li data-target="#demo" data-slide-to="1"></li>
             <li data-target="#demo" data-slide-to="2"></li>
         </ul>
 
-        <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active crs">
                 <img src="/img/carousel/first.jpg" alt="1">
@@ -34,20 +31,19 @@
             <div class="carousel-item crs">
                 <img src="/img/carousel/second.jpg" alt="2">
                 <div class="carousel-caption">
-                    <h3>Оперативная информация</h3>
-                    <p class="pinf">Данные обновляются каждый час, вы можете следить за актуальным состоянием объекта.</p>
+                    <h3>Оперативность</h3>
+                    <p class="pinf">Данные о заливе обновляются каждый час</p>
                 </div>
             </div>
             <div class="carousel-item crs">
                 <img src="/img/carousel/third.jpg" alt="New 3">
                 <div class="carousel-caption">
-                    <h3>Производимые расчеты</h3>
-                    <p class="pinf">Расчеты производятся спектральной моделью SWAN и учитывает скорость и направление ветра.</p>
+                    <h3>Точность расчетов</h3>
+                    <p class="pinf">Система использует спектральную модель SWAN</p>
                 </div>
             </div>
         </div>
 
-        <!-- Left and right controls -->
         <a class="carousel-control-prev" href="#demo" data-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </a>
@@ -58,14 +54,14 @@
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">Wind Wave</a>
+        <a class="navbar-brand" href="/">Wind Wave</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
             </ul>
         </div>
@@ -76,8 +72,7 @@
         <div class="col-sm-4">
             <h2>Информация о ветре:</h2>
             <h4>Скорость <span th:text="${newest.wind.speed}">5</span> м/c</h4>
-            <h4>Направление</h4>
-            <!--<img class="text-center" th:src="@{/direction/{windDirection}(windDirection = ${windDirection})}"/>-->
+            <h5>Направление <span th:text="${windDirectionName}">северное</span></h5>
             <img class="wind-image" th:src="@{data:image/png;base64,{windDirection}(windDirection = ${windDirection})}"/>
             <hr class="d-sm-none">
         </div>
